@startuml
hide empty members
'left to right direction

class Jeu {
    string nom
    string description
    string regles
    string langue
    string url_media
    int age
    int nombre_joueurs
    string categorie
    string duree
}

class Achat {
    date date_achat
    string lieu
    decimal prix
}

class Mecanique {
    string nom
}

class Editeur {
    string nom
}

class Theme {
    string nom
}

class User {
    string nom
    string prenom
    string pseudo
    string mail
    string mot_de_passe
}

class Commentaire {
    string commentaire
    date date_com
    int note
}


Jeu "0,N" -right- "1,1" Editeur : a créé
Jeu "0,N" -up- "1,1" Theme : appartient
Jeu "0,N" --left-- "0,N" Mecanique : de type
Jeu "0,N" -- "1,1" User : a ajouté
Jeu "0,N" --left-- "0,N" User : a acheté
(Jeu, User) . Achat
'Jeu "0,N" -- "0,N" Utilisateur : a commenté
'(Jeu, Utilisateur) . Commentaire
Jeu "1,1" -- "1,N" Commentaire
Commentaire "0,N" -right- "1,1" User
'Utilisateur "0,N" -- "1,1" JeuUtilisateur: a acheté
'JeuUtilisateur "1,1" -- "0,N" Jeu : appartient

@enduml
